# cemu-ios-muffin

./: CMakeLists.txt  README.md  ROADMAP.md  STATUS.md
.github/workflows/: build-and-release.yml  build-ios-app.yml  build-ios-core.yml  build-ipa.yml  build-test-rpx.yml  build_check.yml  generate_pot.yml
ci/: bitrise.yml  generate-link-flags.sh
src/Cafe/: CMakeLists.txt  CafeSystem.cpp
src/Cafe/HW/Latte/Core/: LatteDraw.cpp  LatteDraw.h  LatteShader.cpp  LatteShaderCache.cpp  LatteShaderGL.cpp  LatteTextureLegacy.cpp  LatteThread.cpp
src/Cafe/HW/Latte/LatteAddrLib/: LatteAddrLib_Coord.cpp
src/Cafe/HW/MMU/: MMU.h
src/Cafe/OS/libs/coreinit/: coreinit_MCP.cpp
src/Cafe/OS/libs/gx2/: GX2.cpp
src/Cemu/FileCache/: FileCache.cpp
src/Cemu/Logging/: CemuLogging.h
src/Common/: precompiled.h
src/Common/ExceptionHandler/: ExceptionHandler_posix.cpp
src/Common/unix/: platform.cpp
src/config/: LaunchSettings.h
src/gui/iosgui/: CMakeLists.txt
src/ios/: Info-AlternateIcons.plist  project.yml
src/ios/App/: CemuApp.swift  ContentView.swift  ControllerSkinPalette.swift  ControllerSkinSelectorByCategory.swift  ControllerSkins.swift  ControllerSkinsLibrary.swift  Entitlements.swift  GameManager.swift  IconManifest.swift  IconPickerView.swift  MetalView.swift  MuffinTheme.swift  SettingsView.swift
src/ios/Bridge/: CemuBridge.h  CemuBridge.mm
src/ios/Emulation/: EmulationEngine.swift
src/ios/Rendering/: MetalRenderer.swift
src/ios/Resources/: icon-manifest.json
src/util/helpers/: helpers.cpp
src/util/highresolutiontimer/: HighResolutionTimer.cpp
(+10 files in other folders)
